# impactarbiter-cli

./: .env.example  .gitignore  CONTRIBUTING.md  INTERNAL_FEATURES.md  README.md  pyproject.toml  results.csv
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  methodology.md  oracle_contribution.md
examples/: fuzzer_script.py
src/: __init__.py  agent.py  cli.py  cli_legacy.py.bak  db.py  oracle.py  trap.py
src/cli/: __init__.py  agent.py  auto_heal.py  paper_extractor.py
src/core/: __init__.py  decorator.py  evaluator.py
src/db/: __init__.py  db_manager.py
src/fuzzer/: __init__.py  adversarial.py
src/oracles/: __init__.py  paged_attention.py  radix_2d.py  radix_attention.py
src/trap/: __init__.py  autograd_trap.py
src/workflows/: __init__.py  agentic_kv_scheduler.py
tests/: test_paged_oracle.py  test_radix_oracle.py  test_trap.py
