[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "impactarbiter-cli"
version = "0.2.0"
description = "Open-source semantic testing harness that catches memory-routing bugs in agent-generated PagedAttention kernels."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ImpactArbiter Team" }
]
keywords = ["llm", "fuzzer", "paged-attention", "vllm", "validation", "ml-infra", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core runtime dependencies (always installed)
dependencies = [
    "click>=8.1.0",
    "torch>=2.1.0",
    "sympy>=1.12",
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "numpy",
    "pathlib",
    "rich>=13.7.0",
    "pypdf>=4.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
# Google Cloud Vertex AI support
vertex = [
    "google-cloud-aiplatform>=1.49.0",
]

# OpenAI support
openai = [
    "openai>=1.14.0",
]

# Anthropic support
anthropic = [
    "anthropic>=0.21.0",
]

# All providers at once
all-providers = [
    "google-cloud-aiplatform>=1.49.0",
    "openai>=1.14.0",
    "anthropic>=0.21.0",
]

# Development tools
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "hatchling>=1.21.0",
]

[project.scripts]
# Entry point: src/cli/auto_heal.py → cli (click group)
impactarbiter = "src.cli.auto_heal:cli"

[project.urls]
Homepage = "https://github.com/impactarbiter/impactarbiter-cli"
Issues = "https://github.com/impactarbiter/impactarbiter-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src"]

# ── Tells hatchling where the source root is ──────────────────────────────────
[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
